Added repository link to html file.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	
 		<ul>
 			<li>
-				<a href="#">Link to Github repository</a>
+				<a href="https://github.com/conn0146/open-data-app">Link to Github repository</a>
 			</li>
 			<li>
 				<a href="http://opendata.phpfogapp.com">Link to PHPFog project</a>
